--- a/index.html
+++ b/index.html
@@ -57,6 +57,31 @@
             </div>
         </div>
     </div>
+
+    <div class="section-three">
+        <p class="quote">
+            <em>
+                This is an inspiring quote, or a testimonial from a customer. Maybe
+                it's just filling up space, or maybe people will actually read it.
+                Who knows? All I know is that it looks nice.
+            </em>
+        </p>
+        <p class="quote-name">-Thor, God of Thunder</p>
+    </div>
+
+    <div class="section-four">
+        <div class="call-content">
+            <div class="text">
+                <p class="section-title">Call to action! It's time!</p>
+                <p class="section-text">Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <button class="button-two">Sign up</button>
+        </div>
+    </div>
+
+    <div class="footer">
+        Copyright © The Odin Project 2021
+    </div>
 </body>
 
 </html>
